--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -188,7 +188,6 @@
         android:id="@+id/relativeLayout_paths"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@id/relativeLayout_boat"
         android:layout_below="@id/relativeLayout_boat"
@@ -306,9 +305,21 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="0"/>
-        </RelativeLayout>
-    </LinearLayout>
 
+
+
+        </RelativeLayout>
+
+        </LinearLayout>
+
+    <Button
+        android:id="@+id/joystick_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/joystick_icon"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/relativeLayout_paths"
+        android:layout_alignParentStart="true"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout_map"
