--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -326,8 +326,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                mapbox:access_token="pk.eyJ1IjoicGxhdHlwdXNsbGMiLCJhIjoiY2lsM3p5bjJyM3U0N3Z5bTNxbmFpZXNwaSJ9.YWzXSt3aXtpoBrdMPmLE3Q"
-                mapbox:style_url="@string/style_mapbox_streets"/>
+                mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets"/>
 
             <Button
                 style="?android:attr/buttonStyleSmall"
