--- a/app/src/main/res/layout/connectdialog.xml
+++ b/app/src/main/res/layout/connectdialog.xml
@@ -1,83 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ipaddresslabel"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal|center_vertical"
-        android:paddingLeft="10dp"
+        android:orientation="horizontal">
 
-        android:text="IP Address"
-        />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/ip_address_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="XXX.XXX.XXX.XXX"
-        android:inputType="number|numberDecimal"
-        android:digits="0123456789."
-        />
+            <TextView
+                android:id="@+id/ipaddresslabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|center_vertical"
+
+                android:paddingLeft="10dp"
+                android:text="IP Address"/>
+
+            <EditText
+                android:id="@+id/ip_address_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:digits="0123456789."
+                android:hint="XXX.XXX.XXX.XXX"
+                android:inputType="number|numberDecimal"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/realBoatButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="Real boat"/>
+
+                <RadioButton
+                    android:id="@+id/simBoatButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Simulated boat"/>
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <!--<TextView-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:id="@+id/phoneId"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Phone ID number" />-->
+    <!--android:paddingLeft="10dp"-->
+    <!--android:id="@+id/phoneId"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Phone ID number" />-->
 
     <!--<EditText-->
-        <!--android:id="@+id/phoneIDNumber"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="XX"-->
-        <!--android:inputType="number" />-->
+    <!--android:id="@+id/phoneIDNumber"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:hint="XX"-->
+    <!--android:inputType="number" />-->
 
 
     <!--<TextView-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:id="@+id/color"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Color" />-->
+    <!--android:paddingLeft="10dp"-->
+    <!--android:id="@+id/color"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Color" />-->
 
     <!--&lt;!&ndash;  &ndash;&gt;-->
 
     <!--<EditText-->
-        <!--android:id="@+id/colorBox"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="left"-->
-        <!--android:inputType="text" >-->
-<!--
+    <!--android:id="@+id/colorBox"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="left"-->
+    <!--android:inputType="text" >-->
+    <!--
     </EditText>
 -->
-        <!--<RadioGroup-->
-        <!--android:id="@+id/simvsactual"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal" >-->
+    <!--<RadioGroup-->
+    <!--android:id="@+id/simvsactual"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal" >-->
 
-        <!--<RadioButton-->
-            <!--android:id="@+id/actualBoatRadio"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="52dp"-->
-            <!--android:checked="true"-->
-            <!--android:text="ActualBoat" />-->
-        <!--<RadioButton-->
-            <!--android:id="@+id/simulationRadio"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:checked="false"-->
-            <!--android:paddingRight="15dp"-->
-            <!--android:text="Simulation" />-->
+    <!--<RadioButton-->
+    <!--android:id="@+id/actualBoatRadio"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="52dp"-->
+    <!--android:checked="true"-->
+    <!--android:text="ActualBoat" />-->
+    <!--<RadioButton-->
+    <!--android:id="@+id/simulationRadio"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:checked="false"-->
+    <!--android:paddingRight="15dp"-->
+    <!--android:text="Simulation" />-->
     <!--</RadioGroup>-->
 
 
@@ -85,6 +129,6 @@
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Connect" />
+        android:text="Connect"/>
 
 </LinearLayout>
