--- a/app/src/main/res/layout/waypoint_info_window.xml
+++ b/app/src/main/res/layout/waypoint_info_window.xml
@@ -19,7 +19,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_below="@+id/waypoint_index_textview"
-        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
         android:background="@drawable/expand"
         />
 </RelativeLayout>
