--- a/app/src/main/res/menu/dropdownmenu.xml
+++ b/app/src/main/res/menu/dropdownmenu.xml
@@ -34,6 +34,11 @@
         android:id="@+id/preferences"
         android:title="Preferences" />
 
+    <item
+        android:id="@+id/auto_pred_button"
+        android:title="Autonomy"
+        />
+
 
 
 </menu>
