--- a/app/src/main/res/layout/waypoint_info_window.xml
+++ b/app/src/main/res/layout/waypoint_info_window.xml
@@ -14,11 +14,19 @@
         android:layout_centerHorizontal="true"
         android:text=""/>
 
+    <TextView
+        android:id="@+id/waypoint_latlong_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/waypoint_index_textview"
+        android:layout_centerHorizontal="true"
+        android:text=""/>
+
     <Button
         android:id="@+id/waypoint_move_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/waypoint_index_textview"
+        android:layout_below="@+id/waypoint_latlong_textview"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         android:background="@drawable/expand"
