--- a/app/src/main/res/layout/tabletlayoutswitch.xml
+++ b/app/src/main/res/layout/tabletlayoutswitch.xml
@@ -187,133 +187,7 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout_paths"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@id/relativeLayout_boat"
-        android:layout_below="@id/relativeLayout_boat"
-        android:layout_toEndOf="@id/relativeLayout_boat"
-        android:background="@drawable/border"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout_path_buttons"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/undo_last_wp_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/undo"/>
-
-
-            <Button
-                android:id="@+id/remove_all_wp_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/undo_last_wp_button"
-                android:background="@drawable/delete"/>
-
-            <Button
-                android:id="@+id/drop_wp_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/remove_all_wp_button"
-                android:background="@drawable/drop_wp"/>
-
-            <Button
-                android:id="@+id/path_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/undo_last_wp_button"
-                android:background="@drawable/polyline"/>
-
-            <Button
-                android:id="@+id/spiral_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/undo_last_wp_button"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/path_button"
-                android:background="@drawable/spiral"/>
-
-            <Button
-                android:id="@+id/lawnmower_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_below="@id/undo_last_wp_button"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/spiral_button"
-                android:background="@drawable/lawnmower"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout_transect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/relativeLayout_path_buttons"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:id="@+id/transect_distance_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="Transect dist.:"/>
-
-            <EditText
-                android:id="@+id/transect_distance_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="center"
-                android:inputType="number"
-                android:text="10"
-                />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout_path_length"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_below="@id/relativeLayout_transect">
-
-            <TextView
-                android:id="@+id/path_length_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="Path length:"/>
-
-            <TextView
-                android:id="@+id/path_length_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="0"/>
-        </RelativeLayout>
-
-    </RelativeLayout>
 
 
     <RelativeLayout
@@ -323,8 +197,8 @@
         android:background="@drawable/border"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@id/relativeLayout_paths"
-        android:layout_below="@id/relativeLayout_paths">
+        android:layout_alignRight="@id/relativeLayout_boat"
+        >
 
         <RelativeLayout
             android:id="@+id/relativeLayout_sampler_jar1"
@@ -442,6 +316,141 @@
             android:layout_marginRight="12dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/reset"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout_paths"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignRight="@id/relativeLayout_boat"
+        android:layout_below="@id/relativeLayout_boat"
+        android:layout_above="@id/relativeLayout_sampler"
+
+        android:background="@drawable/border"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="15dp">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_path_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/undo_last_wp_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/undo"/>
+
+
+            <Button
+                android:id="@+id/remove_all_wp_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true"
+                android:background="@drawable/delete"/>
+
+            <Button
+                android:id="@+id/drop_wp_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/drop_wp"/>
+
+            <Button
+                android:id="@+id/path_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/undo_last_wp_button"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/polyline"/>
+
+            <Button
+                android:id="@+id/spiral_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/undo_last_wp_button"
+                android:layout_centerInParent="true"
+                android:background="@drawable/spiral"/>
+
+            <Button
+                android:id="@+id/lawnmower_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/undo_last_wp_button"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/lawnmower"/>
+
+            <Button
+                android:id="@+id/reverse_order_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/path_button"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/reverse_order"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_path_length"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/relativeLayout_path_buttons"
+            >
+
+            <TextView
+                android:id="@+id/path_length_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="Path length:"/>
+
+            <TextView
+                android:id="@+id/path_length_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="0"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_transect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/relativeLayout_path_length"
+            >
+
+            <TextView
+                android:id="@+id/transect_distance_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="Transect dist.:"/>
+
+            <EditText
+                android:id="@+id/transect_distance_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:inputType="number"
+                android:text="20"
+                />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
