--- a/app/src/main/res/layout/save_waypoints_choose_path_layout.xml
+++ b/app/src/main/res/layout/save_waypoints_choose_path_layout.xml
@@ -3,20 +3,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/saved_paths_listview_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="List of saved paths: "/>
-    <ListView
-        android:id="@+id/saved_paths_listview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/saved_paths_listview_label"/>
-
     <EditText
         android:id="@+id/path_name_edittext"
         android:layout_width="wrap_content"
@@ -24,9 +10,35 @@
         android:ems="10"
         android:inputType="text"
         android:text="Name"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/saved_paths_listview"/>
+        />
+
+    <Button
+        android:id="@+id/save_path_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/saved_paths_listview_label"
+        android:layout_toRightOf="@id/path_name_edittext"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:text="Save path"/>
+
+    <TextView
+        android:id="@+id/saved_paths_listview_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text="List of currently saved paths: "
+        android:layout_below="@id/path_name_edittext"/>
+    <ListView
+        android:id="@+id/saved_paths_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/saved_paths_listview_label"/>
+
+
 
 
 </RelativeLayout>
