Failed attempt to add TourGuide for advanced option menu. Can't use any sort of popup, because the overlay is always below it!!!
Probably need to write a custom popup-style dialog, similar to the connect to boat dialog.

--- a/app/src/main/res/menu/dropdownmenu.xml
+++ b/app/src/main/res/menu/dropdownmenu.xml
@@ -5,7 +5,9 @@
 
     <item
         android:id="@+id/sat"
-        android:title="Satellite Map" />
+        android:title="Satellite Map"
+        android:actionViewClass="android.widget.Button"/>
+
     <item
         android:id="@+id/vector"
         android:title="Vector Map" />
